Set up basic index page structure, added images folder

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tiarama</title>
 </head>
 <body>
-    
+    <header>
+        <div class="headerBG"></div>
+        <div class="logo"></div>
+    </header>
+    <article class="main">
+        <section class="Hi">
+
+        </section>
+    </article>
+    <footer>
+
+    </footer>
 </body>
 </html>
