--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiarama</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="headerBG"></div>
-        <div class="logo"></div>
+        <div class="logo">
+            <div class="logoLetter"><img style="height: 200%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoT.svg" alt="T"></div>
+            <div class="logoLetter"><img style="height: 200%; position: absolute; bottom: 0%; left: 40%;" src="images/logoImages/logoI.svg" alt="I"></div>
+            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoA.svg" alt="A"></div>
+            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -10%;" src="images/logoImages/logoR.svg" alt="R"></div>
+            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -40%;" src="images/logoImages/logoA2.svg" alt="A"></div>
+            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -30%;" src="images/logoImages/logoM.svg" alt="M"></div>
+            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoA3.svg" alt="A"></div>
+        </div>
     </header>
     <article class="main">
         <section class="Hi">
