Set up basic content layout

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/e7e588ae48.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,12 +22,20 @@
         <div class="arrowContainer"><div class="headerArrow"></div><div class="headerArrowRipple"></div></div>
     </header>
     <article class="main">
-        <section class="Hi">
+        <section class="aboutMe">
 
+        </section>
+        <div class="sectionLine"></div>
+        <section class="skills">
+            <i class="fas fa-paint-brush"></i>
+        </section>
+        <div class="sectionLine"></div>
+        <section class="interests">
+            
         </section>
     </article>
     <footer>
-
+        <div class="footerLine"></div>
     </footer>
 </body>
 </html>
