--- a/index.html
+++ b/index.html
@@ -23,15 +23,42 @@
     </header>
     <article class="main">
         <section class="aboutMe">
-
+            <svg width="0" height="0">
+                <radialGradient id="rg" r="150%" cx="30%" cy="107%">
+                  <stop stop-color="#fdf497" offset="0" />
+                  <stop stop-color="#fdf497" offset="0.05" />
+                  <stop stop-color="#fd5949" offset="0.45" />
+                  <stop stop-color="#d6249f" offset="0.6" />
+                  <stop stop-color="#285AEB" offset="0.9" />
+                </radialGradient>
+            </svg>
+            <div><i class="fas fa-info fa-6x icon aboutMeIcon"></i></div>
         </section>
         <div class="sectionLine"></div>
         <section class="skills">
-            <i class="fas fa-paint-brush"></i>
+            <svg width="0" height="0">
+                <radialGradient id="rg" r="150%" cx="30%" cy="107%">
+                  <stop stop-color="#fdf497" offset="0" />
+                  <stop stop-color="#fdf497" offset="0.05" />
+                  <stop stop-color="#fd5949" offset="0.45" />
+                  <stop stop-color="#d6249f" offset="0.6" />
+                  <stop stop-color="#285AEB" offset="0.9" />
+                </radialGradient>
+              </svg>
+            <div><i class="fas fa-paint-brush fa-5x icon skillsIcon"></i></div>
         </section>
         <div class="sectionLine"></div>
         <section class="interests">
-            
+            <svg width="0" height="0">
+                <radialGradient id="rg" r="150%" cx="30%" cy="107%">
+                  <stop stop-color="#fdf497" offset="0" />
+                  <stop stop-color="#fdf497" offset="0.05" />
+                  <stop stop-color="#fd5949" offset="0.45" />
+                  <stop stop-color="#d6249f" offset="0.6" />
+                  <stop stop-color="#285AEB" offset="0.9" />
+                </radialGradient>
+              </svg>
+            <div><i class="fas fa-heartbeat fa-5x icon interestsIcon"></i></div>
         </section>
     </article>
     <footer>
