Fixed icon gradient colors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <header class="header">
+        <svg width="0" height="0">
+            <radialGradient id="rg" r="150%" cx="30%" cy="107%">
+              <stop stop-color="#FDCA40" offset="0" />
+              <stop stop-color="#F1E3F3" offset="0.35" />
+              <stop stop-color="#99EDCC" offset="0.5" />
+              <stop stop-color="#5DA9E9" offset="0.8" />
+              <stop stop-color="#006D77" offset="0.9" />
+            </radialGradient>
+          </svg>
         <div class="headerBG"></div>
         <div class="logo">
             <div class="logoLetter"><img style="height: 200%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoT.svg" alt="T"></div>
@@ -23,41 +32,14 @@
     </header>
     <article class="main">
         <section class="aboutMe">
-            <svg width="0" height="0">
-                <radialGradient id="rg" r="150%" cx="30%" cy="107%">
-                  <stop stop-color="#fdf497" offset="0" />
-                  <stop stop-color="#fdf497" offset="0.05" />
-                  <stop stop-color="#fd5949" offset="0.45" />
-                  <stop stop-color="#d6249f" offset="0.6" />
-                  <stop stop-color="#285AEB" offset="0.9" />
-                </radialGradient>
-            </svg>
             <div><i class="fas fa-info fa-6x icon aboutMeIcon"></i></div>
         </section>
         <div class="sectionLine"></div>
         <section class="skills">
-            <svg width="0" height="0">
-                <radialGradient id="rg" r="150%" cx="30%" cy="107%">
-                  <stop stop-color="#fdf497" offset="0" />
-                  <stop stop-color="#fdf497" offset="0.05" />
-                  <stop stop-color="#fd5949" offset="0.45" />
-                  <stop stop-color="#d6249f" offset="0.6" />
-                  <stop stop-color="#285AEB" offset="0.9" />
-                </radialGradient>
-              </svg>
             <div><i class="fas fa-paint-brush fa-5x icon skillsIcon"></i></div>
         </section>
         <div class="sectionLine"></div>
         <section class="interests">
-            <svg width="0" height="0">
-                <radialGradient id="rg" r="150%" cx="30%" cy="107%">
-                  <stop stop-color="#fdf497" offset="0" />
-                  <stop stop-color="#fdf497" offset="0.05" />
-                  <stop stop-color="#fd5949" offset="0.45" />
-                  <stop stop-color="#d6249f" offset="0.6" />
-                  <stop stop-color="#285AEB" offset="0.9" />
-                </radialGradient>
-              </svg>
             <div><i class="fas fa-heartbeat fa-5x icon interestsIcon"></i></div>
         </section>
     </article>
