Added basis for icon click animations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class="header">
+        <!-- The following SVG is the gradient for the icons-->
         <svg width="0" height="0">
             <radialGradient id="rg" r="150%" cx="30%" cy="107%">
               <stop stop-color="#FDCA40" offset="0" />
@@ -37,6 +38,9 @@
         <div class="sectionLine"></div>
         <section class="skills">
             <div><i class="fas fa-paint-brush fa-5x icon skillsIcon"></i></div>
+            <!-- <div class="sectionGrey"></div> -->
+            <!-- <div class="sectionGradient"></div> -->
+            <!-- <div class="sectionWhite"></div> -->
         </section>
         <div class="sectionLine"></div>
         <section class="interests">
