--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -30%;" src="images/logoImages/logoM.svg" alt="M"></div>
             <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoA3.svg" alt="A"></div>
         </div>
-        <div class="arrowContainer"><button class="headerArrow" onClick="document.getElementById('footer').scrollIntoView();"></button><div class="headerArrowRipple"></div></div>
+        <div class="arrowContainer"><div class="headerArrow" onClick="document.getElementById('footer').scrollIntoView({behaviour:'smooth'});"></div><div class="headerArrowRipple"></div></div>
     </header>
     <article class="main">
         <section class="aboutMe">
