--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           </svg>
         <div class="headerBG"></div>
         <div class="logo">
-            <div class="logoLetter"><img style="height: 200%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoT.svg" alt="T"></div>
-            <div class="logoLetter"><img style="height: 200%; position: absolute; bottom: 0%; left: 40%;" src="images/logoImages/logoI.svg" alt="I"></div>
-            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoA.svg" alt="A"></div>
-            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -10%;" src="images/logoImages/logoR.svg" alt="R"></div>
-            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -40%;" src="images/logoImages/logoA2.svg" alt="A"></div>
-            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -30%;" src="images/logoImages/logoM.svg" alt="M"></div>
-            <div class="logoLetter"><img style="height: 100%; position: absolute; bottom: 0%; left: -20%;" src="images/logoImages/logoA3.svg" alt="A"></div>
+            <div class="logoLetter"><img src="images/logoImages/logoT.svg" alt="T"></div>
+            <div class="logoLetter"><img src="images/logoImages/logoI.svg" alt="I"></div>
+            <div class="logoLetter"><img src="images/logoImages/logoA.svg" alt="A"></div>
+            <div class="logoLetter"><img src="images/logoImages/logoR.svg" alt="R"></div>
+            <div class="logoLetter"><img src="images/logoImages/logoA2.svg" alt="A"></div>
+            <div class="logoLetter"><img src="images/logoImages/logoM.svg" alt="M"></div>
+            <div class="logoLetter"><img src="images/logoImages/logoA3.svg" alt="A"></div>
         </div>
         <div class="arrowContainer"><div class="headerArrow" onClick="document.getElementById('footer').scrollIntoView({behaviour:'smooth'});"></div><div class="headerArrowRipple"></div></div>
     </header>
