aligned content sections with grid rather than flex

--- a/index.html
+++ b/index.html
@@ -33,18 +33,22 @@
     </header>
     <article class="main">
         <section class="aboutMe">
-            <div><i class="fas fa-info fa-6x icon aboutMeIcon"></i></div>
+           <div style="margin: auto;">
+            <i class="fas fa-info fa-6x icon aboutMeIcon"></i>
+        </div>
         </section>
         <div class="sectionLine"></div>
         <section class="skills">
-            <div><i class="fas fa-paint-brush fa-5x icon skillsIcon"></i></div>
-            <!-- <div class="sectionGrey"></div> -->
-            <!-- <div class="sectionGradient"></div> -->
-            <!-- <div class="sectionWhite"></div> -->
+            <div style="margin: auto;">
+                <i class="fas fa-paint-brush fa-5x icon skillsIcon"></i></div>
+
         </section>
         <div class="sectionLine"></div>
         <section class="interests">
-            <div><i class="fas fa-heartbeat fa-5x icon interestsIcon"></i></div>
+            <div style="margin: auto;">
+                <i class="fas fa-heartbeat fa-5x icon interestsIcon"></i>
+            </div>
+
         </section>
     </article>
     <footer>
