--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1 style="padding-right: 20%">whatIsIt?</h1>
                 <p>This is my webpage. It's really for myself: to build on as my coding improves and to showcase new skills as I learn them. It's fun putting things like this together, but it gives you an idea of my current level too. You must be curious or you wouldn't be here, right? &hearts;</p>
                 <h1 style="padding-left: 20%">why.</h1>
-                <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those time's for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough to hold my breath, close my eyes, and throw myself into the water. Admittedly I'm terrified, but I think that's part of the fun.</p>
+                <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those times for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough to hold my breath, close my eyes, and throw myself into the water. Admittedly I'm terrified, but I think that's part of the fun.</p>
                 <br/><br/><br/><br/><br/><br/>
             </div>
             <i class="fas fa-info fa-6x icon aboutMeIcon" onClick="applyIconClickAnimation('#aboutMe')"></i>
@@ -51,8 +51,9 @@
         <div class="sectionLine"></div>
         <section id="skills">
             <div class="textContent">
-                <h1>mySkills</h1>   
+                <h1>mySkills.</h1>   
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h1>certificates.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <br/><br/><br/><br/><br/><br/>
@@ -65,7 +66,7 @@
         <div class="sectionLine"></div>
         <section id="interests">
                 <div class="textContent">
-                    <h1>Header</h1>   
+                    <h1>backStory</h1>   
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
