added footer icons

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
     </article>
     <footer>
         <div class="footerLine" id="footer"></div>
+        <div class="footerContent">
+            <i class="fas fa-envelope fa-2x mailIcon"></i>
+            <i class="fab fa-linkedin-in fa-2x linkedInIcon"></i>
+            <i class="fab fa-twitter fa-2x twitterIcon"></i>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
