Formatted mySkills content and added interests content

--- a/index.html
+++ b/index.html
@@ -52,10 +52,39 @@
         <section id="skills">
             <div class="textContent">
                 <h1>mySkills.</h1>   
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Languages & Frameworks
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS (progressing)</li>
+                        <li>VueJS (progressing)</li>
+                    </ul>
+                </p>
+                <p>Experience
+                    <ul>
+                        <li>Team Management</li>
+                        <li>Artist Management & Development</li>
+                        <li>Coaching</li>
+                    </ul>
+                </p>
+                <p>Spoken Languages
+                    <ul>
+                        <li>English</li>
+                        <li>Tagalog (Filipino)</li>
+                        <li>German - basic (progressing)</li>
+                    </ul>
+                </p>
                 <h1>certificates.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Tech
+                    <ul>
+                        <li>Responsive Web Design, 300hrs</li>
+                    </ul>
+                </p>
+                <p>Management
+                    <ul>
+                        <li>Senior Management & Coaching Essentials, 72hrs</li>
+                    </ul>
+                </p>
                 <br/><br/><br/><br/><br/><br/>
             </div> 
                 <i class="fas fa-paint-brush fa-5x icon skillsIcon" onClick="applyIconClickAnimation('#skills')"></i>
@@ -66,8 +95,9 @@
         <div class="sectionLine"></div>
         <section id="interests">
                 <div class="textContent">
-                    <h1>backStory</h1>   
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h1>background.</h1>   
+                    <p>Who doesn't want to spend their childhood in the countryside? Discovering a world with animals, forests, lakes, and so many fields to run through it would make Teresa May jealous. Although, growing up as a queer POC in a little old English village did come with it's fair share of challenges. I was forced to think outside the box from an early age and it's because of this that I've always loved to create. Sculptures, stories, songs, poetry, games... I was definitely one of those kids who could only give elaborate answers to simple questions.</p>
+                    <h1 style="padding-left: 20%;">lifeStyle.</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <br/><br/><br/><br/><br/><br/>
