Added progress bar placeholders

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JS (progressing)</li>
+                        <progress class="progressBar" max="100" value="60"></progress>
                         <li>VueJS (progressing)</li>
+                        <progress class="progressBar" max="100" value="10"></progress>
                     </ul>
                 </p>
                 <p>Experience
@@ -78,6 +80,8 @@
                 <p>Tech
                     <ul>
                         <li>Responsive Web Design, 300hrs</li>
+                        <li>JavaScript Algorithms and Data Structures, 300hrs (progressing)</li>
+                        <progress class="progressBar" max="100" value="70"></progress>
                     </ul>
                 </p>
                 <p>Management
