Updated progress bars

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1 style="padding-right: 20%">whatIsIt?</h1>
                 <p>This is my webpage. It's really for myself: to build on as my coding improves and to showcase new skills as I learn them. It's fun putting things like this together, but it gives you an idea of my current level too. You must be curious or you wouldn't be here, right? &hearts;</p>
                 <h1 style="padding-left: 20%">why.</h1>
-                <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those times for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough throw myself into the water with my eyes wide open and with only determination as a floatation device. Admittedly I'm terrified, but I think that's part of the fun.</p>
+                <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those times for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough throw myself into the water without a wetsuit. Admittedly I am terrified, but I think that's part of the fun.</p>
                 <br/><br/><br/><br/><br/><br/>
             </div>
             <i class="fas fa-info fa-6x icon aboutMeIcon" onClick="applyIconClickAnimation('#aboutMe')"></i>
@@ -57,9 +57,9 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JS (progressing)</li>
-                        <progress class="progressBar" max="100" value="60"></progress>
+                        <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 60%"></div></div>
                         <li>VueJS (progressing)</li>
-                        <progress class="progressBar" max="100" value="10"></progress>
+                        <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 5%"></div></div>
                     </ul>
                 </p>
                 <p>Experience
@@ -77,11 +77,13 @@
                     </ul>
                 </p>
                 <h1>certificates.</h1>
-                <p>Tech
+                <p>freeCodeCamp
                     <ul>
                         <li>Responsive Web Design, 300hrs</li>
                         <li>JavaScript Algorithms and Data Structures, 300hrs (progressing)</li>
-                        <progress class="progressBar" max="100" value="70"></progress>
+                        <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 85%"></div></div>
+                        <li>Front End Libraries, 300hrs (progressing)</li>
+                        <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 0%"></div></div>
                     </ul>
                 </p>
                 <p>Management
