changed ul icons

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>JS (progressing)</li>
+                        <li style="list-style-type: circle">JS (progressing)</li>
                         <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 60%"></div></div>
-                        <li>VueJS (progressing)</li>
+                        <li style="list-style-type: circle">VueJS (progressing)</li>
                         <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 5%"></div></div>
                     </ul>
                 </p>
@@ -80,9 +80,9 @@
                 <p>freeCodeCamp
                     <ul>
                         <li>Responsive Web Design, 300hrs</li>
-                        <li>JavaScript Algorithms and Data Structures, 300hrs (progressing)</li>
+                        <li style="list-style-type: circle">JavaScript Algorithms and Data Structures, 300hrs (progressing)</li>
                         <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 85%"></div></div>
-                        <li>Front End Libraries, 300hrs (progressing)</li>
+                        <li style="list-style-type: circle">Front End Libraries, 300hrs (progressing)</li>
                         <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 0%"></div></div>
                     </ul>
                 </p>
