--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
         <section id="interests">
                 <div class="textContent">
                     <h1>background.</h1>   
-                    <p>Who doesn't want to spend their childhood in the countryside? Discovering a world with animals, forests, lakes, and so many fields to run through it would make Teresa May jealous. Although, growing up as a queer POC in a little old English village did come with it's fair share of challenges. I was forced to think outside the box from an early age and it's because of this that I've always loved to create. Sculptures, stories, songs, poetry, games... I was definitely one of those kids who could only give elaborate answers to simple questions.</p>
-                    <h1 style="padding-left: 20%;">lifeStyle.</h1>
+                    <p>Who doesn't want to spend their childhood in the countryside? Discovering a world with animals, forests, lakes, and so many fields to run through it would make Theresa May jealous. Although, growing up as a queer POC in a little old English village did come with it's fair share of challenges. I was forced to think outside the box from an early age and it's because of this that I've always loved to create. Sculptures, stories, songs, poetry, games... I was definitely one of those kids who could only give elaborate answers to simple questions.</p>
+                    <h1 style="padding-left: 20%;">goals.</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h1 style="padding-right: 20%;">aspirations.</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <br/><br/><br/><br/><br/><br/>
                 </div>
