Added drop-shadow to icon svg on hover

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
     <footer>
         <div class="footerLine" id="footer"></div>
         <div class="footerContent">
-            <i class="fas fa-envelope fa-2x mailIcon"></i>
-            <i class="fab fa-linkedin-in fa-2x linkedinIcon"></i>
-            <i class="fab fa-twitter fa-2x twitterIcon"></i>
-            <i class="fab fa-github fa-2x githubIcon"></i>
-            <i class="fab fa-galactic-republic fa-2x codewarsIcon"></i>
+            <i class="fas fa-envelope fa-2x icon mailIcon"></i>
+            <i class="fab fa-linkedin-in fa-2x icon linkedinIcon"></i>
+            <i class="fab fa-twitter fa-2x icon twitterIcon"></i>
+            <i class="fab fa-github fa-2x icon githubIcon"></i>
+            <i class="fab fa-galactic-republic fa-2x icon codewarsIcon"></i>
         </div>
     </footer>
     <script src="script.js"></script>
